--- a/index.html
+++ b/index.html
@@ -1,55 +1,68 @@
 <!DOCTYPE html>
 <html lang="ru" class="page">
 	<head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-	<meta name="theme-color" content="#111111" />
-	<title>Analytics-hh</title>
-	<link rel="preload" href="fonts/Golos-Text-Regular.woff2" as="font" type="font/woff2" crossorigin />
-	<link rel="preload" href="fonts/Montserrat-Regular.woff2" as="font" type="font/woff2" crossorigin />
-	<link rel="preload" href="fonts/Golos-Text-DemiBold.woff2" as="font" type="font/woff2" crossorigin />
-	<link rel="stylesheet" href="css/vendor.css" />
-	<link rel="stylesheet" href="css/main.css" />
-	<script defer src="js/main.js"></script>
-</head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+		<meta name="theme-color" content="#111111" />
+		<title>Analytics-hh</title>
+		<link rel="preload" href="fonts/Golos-Text-Regular.woff2" as="font" type="font/woff2" crossorigin />
+		<link rel="preload" href="fonts/Montserrat-Regular.woff2" as="font" type="font/woff2" crossorigin />
+		<link rel="preload" href="fonts/Golos-Text-DemiBold.woff2" as="font" type="font/woff2" crossorigin />
+		<link rel="stylesheet" href="css/vendor.css" />
+		<link rel="stylesheet" href="css/main.css" />
+		<script defer src="js/main.js"></script>
+	</head>
 
 	<body class="page__body">
 		<div class="site-container">
 			<header class="header">
-	<div class="container header__container"></div>
-</header>
+				<div class="container header__container"></div>
+			</header>
 
-			<main class="main"><section class="hero">
-	<div class="container hero__container">
-		<h1 class="hero__title">Аналитика кандидатов</h1>
-		<ul class="list-reset hero__list"></ul>
-		<div class="hero__container-buttons">
-			<button class="btn-reset hero__button hero__button-plus">
-				<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40" fill="none">
-					<rect width="40" height="40" rx="10" fill="#126797" />
-					<path
-						fill-rule="evenodd"
-						clip-rule="evenodd"
-						d="M19.16 9.60001C18.2984 9.60001 17.6 10.2053 17.6 10.952V17.6L10.952 17.6C10.2053 17.6 9.59998 18.2984 9.59998 19.16V20.84C9.59998 21.7016 10.2053 22.4 10.952 22.4H17.6V29.048C17.6 29.7947 18.2984 30.4 19.16 30.4H20.84C21.7015 30.4 22.4 29.7947 22.4 29.048V22.4H29.048C29.7947 22.4 30.4 21.7016 30.4 20.84V19.16C30.4 18.2984 29.7947 17.6 29.048 17.6L22.4 17.6V10.952C22.4 10.2053 21.7015 9.60001 20.84 9.60001H19.16Z"
-						fill="white"
-					/>
-				</svg>
-			</button>
-			<button class="btn-reset hero__button hero__button-minus">
-				<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40" fill="none">
-					<rect width="40" height="40" rx="10" fill="#126797" />
-					<path
-						d="M29.048 17.6C29.7947 17.6 30.4 18.2984 30.4 19.16L30.4 20.84C30.4 21.7016 29.7947 22.4 29.048 22.4L10.952 22.4C10.2053 22.4 9.60002 21.7016 9.60003 20.84L9.60003 19.16C9.60003 18.2984 10.2053 17.6 10.952 17.6L29.048 17.6Z"
-						fill="white"
-					/>
-				</svg>
-			</button>
-		</div>
-	</div>
-</section>
-</main>
+			<main class="main">
+				<section class="hero">
+					<div class="container hero__container">
+						<h1 class="hero__title">Аналитика кандидатов</h1>
+						<ul class="list-reset hero__list"></ul>
+						<div class="hero__container-buttons">
+							<button class="btn-reset hero__button hero__button-plus">
+								<svg
+									xmlns="http://www.w3.org/2000/svg"
+									width="40"
+									height="40"
+									viewBox="0 0 40 40"
+									fill="none"
+								>
+									<rect width="40" height="40" rx="10" fill="#126797" />
+									<path
+										fill-rule="evenodd"
+										clip-rule="evenodd"
+										d="M19.16 9.60001C18.2984 9.60001 17.6 10.2053 17.6 10.952V17.6L10.952 17.6C10.2053 17.6 9.59998 18.2984 9.59998 19.16V20.84C9.59998 21.7016 10.2053 22.4 10.952 22.4H17.6V29.048C17.6 29.7947 18.2984 30.4 19.16 30.4H20.84C21.7015 30.4 22.4 29.7947 22.4 29.048V22.4H29.048C29.7947 22.4 30.4 21.7016 30.4 20.84V19.16C30.4 18.2984 29.7947 17.6 29.048 17.6L22.4 17.6V10.952C22.4 10.2053 21.7015 9.60001 20.84 9.60001H19.16Z"
+										fill="white"
+									/>
+								</svg>
+							</button>
+							<button class="btn-reset hero__button hero__button-minus">
+								<svg
+									xmlns="http://www.w3.org/2000/svg"
+									width="40"
+									height="40"
+									viewBox="0 0 40 40"
+									fill="none"
+								>
+									<rect width="40" height="40" rx="10" fill="#126797" />
+									<path
+										d="M29.048 17.6C29.7947 17.6 30.4 18.2984 30.4 19.16L30.4 20.84C30.4 21.7016 29.7947 22.4 29.048 22.4L10.952 22.4C10.2053 22.4 9.60002 21.7016 9.60003 20.84L9.60003 19.16C9.60003 18.2984 10.2053 17.6 10.952 17.6L29.048 17.6Z"
+										fill="white"
+									/>
+								</svg>
+							</button>
+						</div>
+					</div>
+				</section>
+			</main>
 		</div>
 	</body>
 </html>
